fully functioning timer

--- a/home.html
+++ b/home.html
@@ -16,10 +16,16 @@
   <body>
     <div class="container">
       <h1>JavaScript Code Test!</h1>
-      <a id="start-btn" class="btn btn-success" href="index.html" role="button">Start</a>
+      <a
+            id="continue-btn"
+            class="btn btn-success"
+            href="index.html"
+            role="button"
+            >Continue</a
+          >
         </div>
       </div>
     </div>
-    <script src="app.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
