added more questions, body class changes wrong/correct but not buttons

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="style/style.css" />
   </head>
-  <body id="body">
+  <body>
     <div class="container">
       <h1>Code Quiz</h1>
       <div class="display">
@@ -28,7 +28,9 @@
           <button class="btn">Answer 4</button>
         </div>
         <div class="controls">
-          <button id="start-btn" data-time="300" class="btn btn-success">Start Quiz</button>
+          <button id="start-btn" data-time="300" class="btn btn-success">
+            Start Quiz
+          </button>
           <a id="next-btn" class="btn btn-warning" href="#" role="button"
             >Next</a
           >
